<resources>
    <string name="app_name">Cafe Eden</string>
    <string name="menuBotaoContactos">Contacts</string>
    <string name="menuBotaoGaleria">Gallery</string>
    <string name="menuBotaoComida">Sugestions</string>
    <string name="textoBemVindo">Welcome</string>
    <string name="menuBotaoEventos">Events</string>
    <string name="textoCabecalhoMenu">Menu</string>
    <string name="contactsTelemovel">Mobile Phone: 930551090</string>
    <string name="contactsTelefone">CellPhone: 229374492</string>
    <string name="contactsPaginaFb">Facebook Page </string>
    <string name="mapa">Map </string>
    <string name="botaoIndisponivel">Unable</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
  <string name="homeText1">O café snack-bar ÉDEN surgiu da vontade de servir o cliente de forma simpes e eficaz, não descuidando na qualidade, simpatia ou hospitalidade que os clientes procuram para se sentirem como em casa.
    O café ÉDEN reune alguns pontos fortes, desde uma qualidade inegável da comida, cozinhada com matéria prima de grande qualidade, até a uma pastelaria rica e variada e bolos caseiros (aquele delicioso bolo de chocolate).
    Não podemos deixar de referir os jesuitas ou os poveirinhos como sendo dois bolos bastante aclamados pelos nossos clientes.
    </string>

     <string name="homeText2">
    O nosso ambiente caseiro fa-lo-á sentir-se em casa onde poderá desfrutar das melhores combinações de sabores.
    Não perca também a oportunidade de encomendar os nossos bolos, e surpreender a sua família e amigos.
    Visite-nos e venha provar a francesinha à ÉDEN, esperamos por si</string>


</resources>
