<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.netoapps2.cafeedenapp.Contacts"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuBotaoContactos"
        android:textSize="32sp"
        android:paddingBottom= "64dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/telefone"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:text="@string/contactsTelemovel"
        />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/telemovel"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:text="@string/contactsTelefone"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/facebook"
        android:textSize="42sp"
        android:textStyle="bold|italic"
        android:gravity="center_horizontal"
        android:text="@string/contactsPaginaFb"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botaoMapa"
        android:text="@string/mapa"
        android:layout_marginTop="64dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
